# autogenai

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test.py
examples/: gemini_simple_chat.py  openai_chat.py  sdk_chat.py  sdk_cli.py  simple_chat.py
src/autogenai/: cli.py  tools.py
src/autogenai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/autogenai/core/: base.py  factory.py  gemini_engine.py  openai_engine.py
src/autogenai/utils/: config.py  errors.py  logger.py
tests/: test_base.py  test_factory.py  test_gemini.py  test_openai.py
