[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autogenai"
version = "0.1.0"
description = "Unified SDK for OpenAI, Gemini and more"
authors = [
    { name="Sanin K", email="dev.sanink@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx", 
    "python-dotenv"
]

[project.scripts]
autogenai = "autogenai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
